# Post-training-of-DeepSeek-OCR

./: .gitignore  LICENSE  README.md  SFT.ipynb  main.py  pyproject.toml
utils/: SFT_data.py  __init__.py  inference.py
