[project]
name = "post-training-of-deepseek-ocr"
version = "0.1.0"
description = "Applying post-training techniques to improve DeepSeek OCR model performance"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "easydict>=1.13",
    "einops>=0.8.1",
    "flash-attn==2.7.3",
    "img2pdf>=0.6.3",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pymupdf>=1.26.6",
    "tokenizers==0.20.3",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.46.3",
]
